bugs, code quality, and updates

--- a/WebService/wwwroot/index.html
+++ b/WebService/wwwroot/index.html
@@ -24,14 +24,15 @@
 
 <div class="gameDiv">
     WorkBud
-    <input type="text" id="colorupdateform" placeholder="Change Color (HEX Code)" style="margin-left: 20px">
+    <input type="text" id="colorupdateform" placeholder="Change Color (HEX Code)" style="margin-left: 20px" onKeyDown="if(event.keyCode===13) updateColor();">
     <button onclick="updateColor()"></button>
-    <button onclick="endgame()" style="margin-left: 20px">Logout</button>
+    <button onclick="endgame()" style="margin-left: 20px; margin-right: 20px">Logout</button>
+    Use your arrow keys to move!
 </div>
 
-<div class="status_bar">
-    <button onclick="getPlayerStats()">Get Statistics</button>
-    Status: <output id="status"></output>
+<div id="status_bar">
+    <button onclick="getPlayerStats()" style="margin-right: 10px;">Get Statistics</button>
+    Status | <output id="status"></output>
 </div>
 </body>
 </html>
